# rhobear-designs

./: .gitignore  .verifierignore  README.md  RELEASE.md  THIRD-PARTY-NOTICES.md
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
architect-audits/: BUILD-BOARD.md  wake-log.md  wave-audits.md
docs/: pathway-manifest.md
editor/: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  glass-verify.mjs  glass-verify2.mjs  index.html  m.html  package-lock.json  package.json  playwright.config.js  t.html  vite.config.js
editor/public/: CNAME  companion-embed.js  manifest.webmanifest  sw.js
editor/src/: main.js
editor/src-tauri/: Cargo.toml  README.md  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: lib.rs  main.rs
engine/: .gitignore  README.md
reports/: pressure-designs.evidence.json  pressure-designs.md
samples/: README.md
samples/minimax-m2.7/: README.md  (+10 more)
service/: package.json
site/: index.html
swarm-briefs/: README.md  an1-pattern-analysis.md  ap1-asset-pipeline.md  cc1-community-contrib.md  core1-doc-model.md  e2-live-render.md  e2-overlay-picker.md  e2-override-serializer.md  g1-vendor-grapes.md  gen-a-studios.md  gen-b-craft.md  gen-c-award.md  le1-element-dissector.md  le2-stash-expand.md  lf1-fonts-catalog.md  lt1-template-bank.md  med1-media-bucket.md  pkg1-release-packaging.md  ps1-projects-store.md  td1-3d-core.md  tn1-fullpage-thumbs.md  w3-fidelity-tests.md  w3-import-export.md  w3-modeb-wire.md
tests/: findings-repro.py  pressure_designs.py
(+221 files in other folders)
